--- a/window.css
+++ b/window.css
@@ -349,11 +349,11 @@ table {
     border: 1px inset lightgray;
 }
 .tab-button-close {
-    display: none;
     width: 16px;
     /*height: 13px;*/
 
     background-image: url('images/button-close.png');
+    background-color: rgba(255, 255, 255, 0.75);
     /*background-position: center;*/
 
     border-radius: 3px;
@@ -361,9 +361,11 @@ table {
     /*text-align: center;
     vertical-align: middle;*/
 }
-.tab:hover > .tab-button-close {
+.tab-button-close[data-display-hover] {
+    display: none;
+}
+.tab:hover > .tab-button-close[data-display-hover] {
     display: table-cell;
-    background-color: rgba(255, 255, 255, 0.75);
 }
 .tab-button-close:hover {
     /*background-image: url('close-button-hover.png');*/
