--- a/themes/White.css
+++ b/themes/White.css
@@ -25,3 +25,11 @@
 .tab-icon-text {
     color: dimgray;
 }
+
+.tab-icon-dropdown {
+    background-image: url('White-button-menu.png');
+}
+
+button.custom:active, button.custom:hover {
+    background-color: #f5f5f5 !important;
+}
