--- a/window.css
+++ b/window.css
@@ -34,6 +34,15 @@ table {
     height: 100%;
 }
 
+.link {
+    display: inline-block;
+    color: #00C;
+    cursor: pointer;
+    text-decoration: underline;
+    white-space: nowrap;
+    outline: none;
+}
+
 #URL-bar {
     -webkit-box-shadow: gainsboro 1px 1px 5px;
 
@@ -79,6 +88,7 @@ table {
     float: left;
     /*width: 100%;*/
     position: relative;
+    top: 3px;
     left: 50%;
     /*top: 5px;*/
     /*top: 17px;
@@ -98,16 +108,12 @@ table {
 
     background-color: #FFF1A8;
     padding: 2px 5px;
+    margin: 0px 7px;
     font-weight: bold;
     border: 1px solid dimgray;
     border-radius: 5px;
 }
 #Undo-bar-button {
-    display: inline-block;
-    color: #00C;
-    cursor: pointer;
-    text-decoration: underline;
-    white-space: nowrap;
     margin-left: 10px;
 }
 
@@ -121,33 +127,40 @@ table {
 #container-buttons {
     position: fixed;
     width: 100%;
-    padding: 15px;
-    padding-left: 11px;
-    padding-right: 19px;
+    padding: 13px 22px 21px 24px;
     margin-top: 1px;
 
     white-space: nowrap;
-    z-index: 1;
+    z-index: 9001;
 
     vertical-align: top;
     /*border: none;
     border-spacing: 0px 0px;*/
 }
-#container-buttons button {
+#container-buttons .separator {
+    margin: 0px 7px;
+    /*margin-left: 1px;
+    margin-right: 6px;
+    margin-right: 5px;*/
+}
+/*#container-buttons button {
     width: 150px;
-    margin-left: 12px;
 
     white-space: normal;
-}
+}*/
 #button-new-window {
-    display: table-cell;
+    /*display: table-cell;*/
+    margin: 0px;
+    margin-right: 12px;
 }
 #search-box {
     /*position: fixed;
     top: 15px;
     right: 15px;*/
 
-    display: table-cell;
+    /*display: table-cell;*/
+    position: relative;
+    /*padding-left: 10px;*/
 
     /*text-shadow: white 0px 1px 0px;*/
     white-space: nowrap;
@@ -155,11 +168,12 @@ table {
 #search-box > input {
     /*-webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 1px;*/
 
-    position: relative;
-    top: -3px;
+    /*position: relative;
+    top: -3px;*/
 
-    width: 225px; /*! 200px */
+    width: 237px; /*! 200px 225px */
     padding: 0px 2px;
+    margin: 0px;
 
     border-color: #e1e1e1;
     border-radius: 2px;
@@ -171,12 +185,15 @@ table {
 #search-past {
     -webkit-box-shadow: dimgray 0px 2px 5px;
 
-    position: relative;
+    position: absolute;
     z-index: 9001;
+
+    width: 100%;
 
     max-height: 7.8em;
     padding: 0px;
     margin: -4px 1px 0px;
+    margin-right: -10px;
 
     background-color: white;
     border: 1px solid dimgray;
