--- a/window.css
+++ b/window.css
@@ -135,7 +135,7 @@ button.link {
 #container-buttons {
     position: fixed;
     width: 100%;
-    padding: 13px 22px 21px 24px;
+    padding: 13px 18px 21px 24px;
     margin-top: 1px;
 
     white-space: nowrap;
@@ -179,7 +179,7 @@ button.link {
     /*position: relative;
     top: -3px;*/
 
-    width: 237px; /*! 200px 225px */
+    width: 241px; /*! 200px 225px */
     padding: 0px 2px;
     margin: 0px;
 
@@ -191,17 +191,16 @@ button.link {
     background-position: right 1px;*/
 }
 #search-past {
-    -webkit-box-shadow: dimgray 0px 2px 5px;
+    -webkit-box-shadow: dimgray 0px 2px 3px;
 
-    position: absolute;
-    z-index: 9001;
+    /*position: absolute;
+    z-index: 9001;*/
 
-    width: 100%;
+    /*width: 100%;*/
 
-    max-height: 7.8em;
+    /*max-height: 7.8em;*/
     padding: 0px;
-    margin: -4px 1px 0px;
-    margin-right: -10px;
+    margin: 4px 1px 0px 1px;
 
     background-color: white;
     border: 1px solid dimgray;
