--- a/lib/Options.css
+++ b/lib/Options.css
@@ -86,7 +86,8 @@ input[type="checkbox"][data-options-changed] + span {
     z-index: 9001;
 
     padding: 1px 2px;
-    margin: 0 5px;
+    margin: 0px 5px;
+    margin-top: -1px;
 
     border: 1px solid dimgray;
     border-radius: 3px;
