--- a/lib/UI Helper.css
+++ b/lib/UI Helper.css
@@ -72,21 +72,59 @@
     outline: none !important;
 }
 
-.UI-contextMenu-submenu-list {
-    -webkit-transition: visibility 0s 0.4s;
-    -webkit-transition: opacity 0.1s 0.3s;
+/*.UI-contextMenu-submenu, .UI-contextMenu-submenu-padding, .UI-contextMenu-submenu-mask {
+    border: 1px solid red;
+}*/
+
+.UI-contextMenu-submenu-padding {
+    position: absolute;
+    left: 100%;
+    top: -4px;
+
+    padding: 8px;
+    margin-left: -8px;
+    margin-top: -8px;
+}
+
+/*.UI-contextMenu-submenu-list {
+    margin-left: 1px;
+    margin-top: -4px;
+}*/
+
+.UI-contextMenu-submenu-mask {
+    -webkit-transform-origin: 0%;
+    -webkit-transform: rotate(5deg);
+    /*-webkit-mask-box-image: url(/images/context-menu-mask.png);*/
+
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    right: -10px;
+    /*border-bottom-left-radius: 100%;*/
+
+    height: 100%;
+}
+/*.UI-contextMenu-submenu-mask.num2 {
+    -webkit-transform: rotate(-20deg);
+
+    top: 100%;
+    width: 13px;
+
+    height: 200%;
+}*/
+
+.UI-contextMenu-submenu-list,
+.UI-contextMenu-submenu-mask,
+.UI-contextMenu-submenu-padding {
+    -webkit-transition: visibility 0s 0.5s;
+    -webkit-transition: opacity 0.1s 0.4s;
 
     visibility: hidden;
     opacity: 0;
-
-    position: absolute;
-    left: 100%;
-    top: 0px;
-
-    margin-left: 1px;
-    margin-top: -4px;
 }
-.UI-contextMenu-submenu[data-selected] > .UI-contextMenu-submenu-list {
+.UI-contextMenu-submenu[data-selected] .UI-contextMenu-submenu-list,
+.UI-contextMenu-submenu[data-selected] .UI-contextMenu-submenu-mask,
+.UI-contextMenu-submenu[data-selected] .UI-contextMenu-submenu-padding {
     visibility: visible;
     opacity: 1;
 }
